--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthSheet">
         <activity
+            android:name=".update_profile"
+            android:exported="false" />
+        <activity
+            android:name=".CalorieLogModel"
+            android:exported="false" />
+        <activity
             android:name=".HealthInformation"
             android:exported="false" />
         <activity
